src/test/ui/issues/issue-33941.stderr
error[E0271]: type mismatch resolving `<std::collections::hash_map::Iter<'_, _, _> as std::iter::Iterator>::Item == &_`
  --> $DIR/issue-33941.rs:4:36
   |
LL |     for _ in HashMap::new().iter().cloned() {}
   |                                    ^^^^^^ expected tuple, found reference
   |
   = note:  expected tuple `(&_, &_)`
           found reference `&_`

error[E0271]: type mismatch resolving `<std::collections::hash_map::Iter<'_, _, _> as std::iter::Iterator>::Item == &_`
  --> $DIR/issue-33941.rs:4:14
   |
LL |     for _ in HashMap::new().iter().cloned() {}
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected tuple, found reference
   |
   = note:  expected tuple `(&_, &_)`
           found reference `&_`
   = note: required because of the requirements on the impl of `std::iter::Iterator` for `std::iter::Cloned<std::collections::hash_map::Iter<'_, _, _>>`

error[E0271]: type mismatch resolving `<std::collections::hash_map::Iter<'_, _, _> as std::iter::Iterator>::Item == &_`
  --> $DIR/issue-33941.rs:4:14
   |
LL |     for _ in HashMap::new().iter().cloned() {}
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected tuple, found reference
   |
   = note:  expected tuple `(&_, &_)`
           found reference `&_`
   = note: required because of the requirements on the impl of `std::iter::Iterator` for `std::iter::Cloned<std::collections::hash_map::Iter<'_, _, _>>`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0271`.
